add sql and file working

--- a/6. Работа с данными/Лекция 6. Работа с данными.ipynb
+++ b/6. Работа с данными/Лекция 6. Работа с данными.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7fba9a38ab90>"
+      "text/plain": "<sqlite3.Cursor at 0x7f8c82d6b9d0>"
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "[('members',), ('facilities',), ('bookings',)]"
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,14 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "Empty DataFrame\nColumns: [memid, surname, firstname, address, zipcode, telephone, recommendedby, joindate]\nIndex: []",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>memid</th>\n      <th>surname</th>\n      <th>firstname</th>\n      <th>address</th>\n      <th>zipcode</th>\n      <th>telephone</th>\n      <th>recommendedby</th>\n      <th>joindate</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,13 +273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7fba9a38ab90>"
+      "text/plain": "<sqlite3.Cursor at 0x7f8c82d6b9d0>"
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "   facid            name  membercost  guestcost  initialoutlay  \\\n0      0  Tennis Court 1           5         25          10000   \n1      1  Tennis Court 2           5         25           8000   \n\n   monthlymaintenance  \n0                 200  \n1                 200  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>facid</th>\n      <th>name</th>\n      <th>membercost</th>\n      <th>guestcost</th>\n      <th>initialoutlay</th>\n      <th>monthlymaintenance</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Tennis Court 1</td>\n      <td>5</td>\n      <td>25</td>\n      <td>10000</td>\n      <td>200</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Tennis Court 2</td>\n      <td>5</td>\n      <td>25</td>\n      <td>8000</td>\n      <td>200</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,13 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7fba9a38ab90>"
+      "text/plain": "<sqlite3.Cursor at 0x7f8c82d6b9d0>"
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,6 +389,48 @@
     "\"\"\"\n",
     ")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   memid   surname firstname                         address  zipcode  \\\n0      4  Joplette    Janice      20 Crossing Road, New York      234   \n1      5   Butters    Gerald  1065 Huntingdon Avenue, Boston    56754   \n\n        telephone  recommendedby             joindate  \n0  (833) 942-4710              1  2012-07-03 10:25:05  \n1  (844) 078-4130              1  2012-07-09 10:44:09  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>memid</th>\n      <th>surname</th>\n      <th>firstname</th>\n      <th>address</th>\n      <th>zipcode</th>\n      <th>telephone</th>\n      <th>recommendedby</th>\n      <th>joindate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4</td>\n      <td>Joplette</td>\n      <td>Janice</td>\n      <td>20 Crossing Road, New York</td>\n      <td>234</td>\n      <td>(833) 942-4710</td>\n      <td>1</td>\n      <td>2012-07-03 10:25:05</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5</td>\n      <td>Butters</td>\n      <td>Gerald</td>\n      <td>1065 Huntingdon Avenue, Boston</td>\n      <td>56754</td>\n      <td>(844) 078-4130</td>\n      <td>1</td>\n      <td>2012-07-09 10:44:09</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \\\n",
+    "\"\"\"\n",
+    "SELECT *\n",
+    "FROM members\n",
+    "\"\"\"\n",
+    "results_df = pd.read_sql_query(query, conn)\n",
+    "results_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
