--- a/6. Работа с данными/Работа с файлами.ipynb
+++ b/6. Работа с данными/Работа с файлами.ipynb
@@ -26,6 +26,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(\"./Files\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "outputs": [],
    "source": [
@@ -148,7 +163,536 @@
     "Существует 3 способа прочитать данные в файле:\n",
     "- read()\n",
     "- readline()\n",
-    "- readlines()"
+    "- readlines()\n",
+    "\n",
+    "По умолчанию `read(size=-1)` возвращает все содержимое файла. Если файл больше памяти, необязательный параметр size может помочь вам ограничить размер возвращаемых символов (текстовый режим) или байтов (двоичный режим).\n",
+    "\n",
+    "`readline(size=-1)` возвращает всю строку, включая символ \\n в конце. Если size больше 0, то возвращается максимальное количество символов из строки.\n",
+    "\n",
+    "`readlines(hint=-1)` возвращает все строки файла в виде списка. Необязательный параметр hint означает, что если количество возвращаемых символов превысит hint, то больше строк возвращено не будет."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the second line\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('file1.txt', 'r') as reader:\n",
+    "    line = reader.readline()\n",
+    "    while line != \"\":\n",
+    "        line = reader.readline()\n",
+    "        print(line)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Для записи существует 2 метода `write()` и `writelines()`.\n",
+    "Как следует из названия, `write()` предназначен для записи строки, а `writelines()` - для записи списка строк. Ответственность за добавление \\n в конце лежит на разработчике."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "with open(\"test1.txt\", \"w+\") as f:\n",
+    "    f.write(\"hi\\n\")\n",
+    "    f.writelines([\"this is a line\\n\", \"this is another line\\n\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Для .csv и .json форматов существуют специальные модули"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import json\n",
+    "\n",
+    "with open(\"cities.csv\", \"w+\") as file:\n",
+    "    writer = csv.DictWriter(file, fieldnames=[\"city\", \"country\"])\n",
+    "    writer.writeheader()\n",
+    "    writer.writerow({\"city\": \"Amsterdam\", \"country\": \"Netherlands\"})\n",
+    "    writer.writerows(\n",
+    "        [\n",
+    "            {\"city\": \"Berlin\", \"country\": \"Germany\"},\n",
+    "            {\"city\": \"Shanghai\", \"country\": \"China\"},\n",
+    "        ]\n",
+    "    )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "# Добавим данных в csv\n",
+    "with open(\"cities.csv\", \"a\") as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['Moscow', 'Russia'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city,country\n",
+      "Amsterdam,Netherlands\n",
+      "Berlin,Germany\n",
+      "Shanghai,China\n",
+      "Moscow,Russia\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('cities.csv', 'r') as file:\n",
+    "    print(file.read())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "with open(\"cities.json\", \"w+\") as file:\n",
+    "    json.dump({\"city\": \"Amsterdam\", \"country\": \"Netherlands\"}, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'city': 'Amsterdam', 'country': 'Netherlands'}"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"cities.json\", \"r\") as file:\n",
+    "    our_dict = json.load(file)\n",
+    "our_dict"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Работа с файлами из Python"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os.stat_result(st_mode=33188, st_ino=4395118662, st_dev=16777220, st_nlink=1, st_uid=501, st_gid=20, st_size=84, st_atime=1643234849, st_mtime=1643234848, st_ctime=1643234848)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.stat(\"cities.csv\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- st_size - размер файла в байтах\n",
+    "- st_atime - время последнего доступа\n",
+    "- st_mtime - время последней модификации"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1643234849.5536268\n",
+      "1643234848.445931\n",
+      "1643234848.445931\n",
+      "84\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.path.getatime(\"cities.csv\"))\n",
+    "print(os.path.getctime(\"cities.csv\"))\n",
+    "print(os.path.getmtime(\"cities.csv\"))\n",
+    "print(os.path.getsize(\"cities.csv\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'file1_copy.txt'"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Скопировать файл\n",
+    "import shutil\n",
+    "shutil.copy(\"file1.txt\", \"file1_copy.txt\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Можно также обращаться через Python к командной строке через модуль `os`.\n",
+    "Заметим, что рабочая директория в этом случае остается как и в Python."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "# Копировать\n",
+    "os.system(\"cp file1.txt file1_copy_copy.txt\")\n",
+    "\n",
+    "# Переименовать / сменить расположение\n",
+    "os.system(\"mv cities.csv cities_new.csv\")\n",
+    "os.rename(\"test1.txt\", \"test11.txt\")\n",
+    "\n",
+    "# Удалить\n",
+    "os.system(\"rm file1_copy_copy.txt\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Поиск файлов"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cities_new.csv']\n",
+      "['cities_new.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "print(glob.glob(\"*.csv\"))\n",
+    "print(glob.glob(\"**/*.csv\",recursive=True))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".csv\n",
+      "cities_new.csv\n",
+      ".csv\n",
+      "cities_new.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in os.listdir(\".\"):\n",
+    "    if file.endswith(\".csv\"):\n",
+    "        print(file)\n",
+    "\n",
+    "for root, dirs, files in os.walk(\".\"):\n",
+    "    for file in files:\n",
+    "        if file.endswith(\".csv\"):\n",
+    "            print(file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## pathlib"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".csv\n",
+      "cities_new.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "p = Path(\".\")\n",
+    "for name in p.glob(\"**/*.csv\"): # recursive\n",
+    "    print(name)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/iakubovskii/Репетитор/Development/6. Работа с данными/Files/1.txt\n",
+      "1.txt\n",
+      "/Users/iakubovskii/Репетитор/Development/6. Работа с данными/Files/1.txt\n",
+      "1.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pathlib\n",
+    "print(os.path.abspath(\"1.txt\"))  # absolute\n",
+    "print(os.path.relpath(\"1.txt\"))  # relative\n",
+    "\n",
+    "print(pathlib.Path(\"1.txt\").absolute())  # absolute\n",
+    "print(pathlib.Path(\"1.txt\"))  # relative"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/file.txt\n",
+      "/home/file.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Присоединяем к пути еще папки\n",
+    "print(os.path.join(\"/home\", \"file.txt\"))\n",
+    "print(pathlib.Path(\"/home\") / \"file.txt\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files\n",
+      "Files\n",
+      "/Users/iakubovskii/Репетитор/Development/6. Работа с данными/Files/Files\n",
+      "/Users/iakubovskii/Репетитор/Development/6. Работа с данными/Files/Files\n"
+     ]
+    }
+   ],
+   "source": [
+    "# relative path\n",
+    "print(os.path.dirname(\"Files/cities_new.csv\"))\n",
+    "# source\n",
+    "print(pathlib.Path(\"Files/cities_new.csv\").parent)\n",
+    "# source\n",
+    "\n",
+    "# absolute path\n",
+    "print(pathlib.Path(\"Files/cities_new.csv\").resolve().parent)\n",
+    "print(os.path.dirname(os.path.abspath(\"Files/cities_new.csv\")))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Как говорится в документации Python, `pathlib` - это более объектно-ориентированное решение, чем `os`. Он представляет каждый путь к файлу как объект, а не как строку. Это дает много преимуществ разработчикам, например, упрощает объединение нескольких путей, является более последовательным на разных операционных системах, методы доступны непосредственно из объекта."
    ],
    "metadata": {
     "collapsed": false,
