--- a/6. Работа с данными/Пример работы с базой в SQLite.ipynb
+++ b/6. Работа с данными/Пример работы с базой в SQLite.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7f7c8086ba40>"
+      "text/plain": "<sqlite3.Cursor at 0x7f7c8086b730>"
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "[('customer',),\n ('sqlite_sequence',),\n ('product',),\n ('product_photo',),\n ('cart',),\n ('cart_product',)]"
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,13 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7f7c8086bf80>"
+      "text/plain": "<sqlite3.Cursor at 0x7f7c81b6d5e0>"
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,13 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "[(1, 'Василий', '02', 'vas@gmail.com'), (2, 'Петр', '03', 'petr@gmail.com')]"
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
       "text/plain": "   id     name phone           email\n0   1  Василий    02   vas@gmail.com\n1   2     Петр    03  petr@gmail.com",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>name</th>\n      <th>phone</th>\n      <th>email</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Василий</td>\n      <td>02</td>\n      <td>vas@gmail.com</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Петр</td>\n      <td>03</td>\n      <td>petr@gmail.com</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,13 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7f7c81b098f0>"
+      "text/plain": "<sqlite3.Cursor at 0x7f7c81b91110>"
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7f7c81b09ce0>"
+      "text/plain": "<sqlite3.Cursor at 0x7f7c81b913b0>"
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,13 +323,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7f7c81b8aea0>"
+      "text/plain": "<sqlite3.Cursor at 0x7f7c81b918f0>"
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,20 +363,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id           url  product_id  id    name description   price\n",
-      "0   1  iphone photo           1   1  iPhone  Cool phone  100000\n"
+      "   id           url  product_id    name description   price\n",
+      "0   1  iphone photo           1  iPhone  Cool phone  100000\n"
      ]
     }
    ],
    "source": [
     "query = \"\"\"\n",
-    "SELECT *\n",
+    "SELECT p.id, url, product_id, name, description, price\n",
     "FROM product_photo pp\n",
     "LEFT JOIN product p\n",
     "ON p.id = pp.id\n",
@@ -416,13 +416,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x7f7c81b8ac70>"
+      "text/plain": "<sqlite3.Cursor at 0x7f7c81bc8570>"
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,14 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "outputs": [
     {
      "data": {
       "text/plain": "      name  cart_id  product_id     price\n0  Василий      1.0         1.0  100000.0\n1  Василий      1.0         2.0   50000.0\n2     Петр      NaN         NaN       NaN",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>cart_id</th>\n      <th>product_id</th>\n      <th>price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Василий</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>100000.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Василий</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>50000.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Петр</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,14 +498,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "outputs": [
     {
      "data": {
       "text/plain": "      name  orders_sum\n0  Василий      150000\n1     Петр           0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>orders_sum</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Василий</td>\n      <td>150000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Петр</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 27,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,6 +533,48 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Обычная фильтрация"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   id     name phone          email\n0   1  Василий    02  vas@gmail.com",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>name</th>\n      <th>phone</th>\n      <th>email</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Василий</td>\n      <td>02</td>\n      <td>vas@gmail.com</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \\\n",
+    "\"\"\"\n",
+    "SELECT *\n",
+    "FROM customer\n",
+    "WHERE LENGTH(name) > 4\n",
+    "\"\"\"\n",
+    "pd.read_sql_query(query, conn)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Добавим фильтрацию к агрегации"
    ],
    "metadata": {
@@ -544,14 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "outputs": [
     {
      "data": {
       "text/plain": "      name  orders_sum\n0  Василий      150000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>orders_sum</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Василий</td>\n      <td>150000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
